--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .scrolling-images {
       display: flex;
       width: calc(800px * 8); /* Assuming 8 images, each 200px wide; adjust based on number of images */
-      animation: scroll 60s linear infinite; /* Adjust duration for speed */
+      animation: scroll 80s linear infinite; /* Adjust duration for speed */
     }
 
     .scrolling-images img {
@@ -50,6 +50,14 @@
         transform: translateX(-50%); /* Since we duplicate images, move by 50% for seamless loop */
       }
     }
+    /* Video styles */
+    .hero-video {
+      width: 100%;
+      height: 400px; /* Adjust height to fit your design */
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
   </style>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>@view-transition { navigation: auto; }</style>
@@ -60,18 +68,19 @@
    <nav class="fixed w-full top-0 z-50 backdrop-blur-md bg-white/90 shadow-sm">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
      <div class="flex items-center gap-3">
-      <img class="w-10 h-10" src="Satish art.jpg" alt="Business Logo"> <!-- Replaced SVG with img tag for logo -->
+      <img class="w-20 h-20" src="Satish art.jpg" alt="Business Logo"> <!-- Replaced SVG with img tag for logo -->
       <div>
        <h1 id="business-name" class="text-xl font-bold text-gray-900">Satish Art</h1>
        <p id="tagline" class="text-xs text-gray-600">Your Campaign Partner</p>
       </div>
      </div>
-     <div class="hidden md:flex gap-6"><a href="#products" class="text-gray-700 hover:text-blue-600 transition-colors">Products</a> <a href="#about" class="text-gray-700 hover:text-blue-600 transition-colors">About</a> <a href="#contact" class="text-gray-700 hover:text-blue-600 transition-colors">Contact</a>
+     <div class="hidden md:flex gap-6"><a href="#products" class="text-gray-800 hover:text-blue-600 transition-colors">Products</a> <a href="#about" class="text-gray-700 hover:text-blue-600 transition-colors">About</a> <a href="#contact" class="text-gray-700 hover:text-blue-600 transition-colors">Contact</a>
      </div>
     </div>
    </nav><!-- Hero Section -->
    <section class="pt-24 pb-16 px-6 bg-gradient-to-br from-blue-50 to-indigo-100">
     <div class="max-w-7xl mx-auto">
+      
      <div class="scrolling-container">
       <div class="scrolling-images">
        <!-- Replace with actual image URLs. Using placeholders for demonstration -->
@@ -95,7 +104,9 @@
       </div>
      </div>
     </div>
-    </div><!-- About Us Section -->
+    </div>
+    
+    <!-- About Us Section -->
    <section id="about" class="py-16 px-6 bg-gradient-to-br from-gray-50 to-blue-50">
     <div class="max-w-7xl mx-auto">
      <h3 class="text-4xl font-bold text-center text-gray-900 mb-12">About Us</h3>
@@ -107,8 +118,14 @@
        <p class="text-gray-700">At Satish Art, we take pride in our commitment to quality craftsmanship, timely delivery, and innovative designs that truly resonate with modern voters.</p>
       </div>
        <div class="relative">
-       <img src="Satish art.jpg" alt="Satish Art Team" class="w-full h-195 object-cover rounded-lg shadow-lg">
-      </div>
+       <!-- Added Video Section with gap -->
+     <div class="mb-12">
+      <video class="hero-video" controls autoplay muted loop>
+       <source src="VID-20251106-WA0011.mp4" type="video/mp4">
+       <!-- Since your video is .mp4, you can remove the .webm source if not needed -->
+       Your browser does not support the video tag.
+      </video>
+     </div>
      </div>
 </section><!-- Products Section -->
    <section id="products" class="py-16 px-6 bg-white">
