--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
     /* Video styles */
     .hero-video {
-      width: 150%;
+      width: 100%;
       height: 300px; /* Adjust height to fit your design */
       object-fit: cover;
       border-radius: 8px;
@@ -61,9 +61,13 @@
        <p id="tagline" class="text-xs text-gray-600">Your Campaign Partner</p>
       </div>
      </div>
-     <div class="hidden md:flex gap-6"><a href="#products" class="text-gray-800 hover:text-blue-600 transition-colors">Products</a> <a href="#about" class="text-gray-700 hover:text-blue-600 transition-colors">About</a> <a href="#contact" class="text-gray-700 hover:text-blue-600 transition-colors">Contact</a>
+     <div class="hidden md:flex gap-6">
+      <a href="#about" class="text-gray-700 hover:text-blue-600 transition-colors bg-white p-4 rounded-lg shadow-md border border-gray-300">About</a>
+      <a href="#products" class="text-gray-800 hover:text-blue-600 transition-colors bg-white p-4 rounded-lg shadow-md border border-gray-300">Products</a> 
+      <a href="#contact" class="text-gray-700 hover:text-blue-600 transition-colors bg-white p-4 rounded-lg shadow-md border border-gray-300">Contact</a>
      </div>
     </div>
+
    </nav><!-- Hero Section -->
    <section class="pt-24 pb-8 md:pb-16 px-6 bg-gradient-to-br from-blue-50 to-indigo-100">
     <div class="max-w-7xl mx-auto">
@@ -85,7 +89,9 @@
        <p class="text-gray-700">At Satish Art, we take pride in our commitment to quality craftsmanship, timely delivery, and innovative designs that truly resonate with modern voters.</p>
       </div>
        <div class="relative">
-       <!-- Added Video Section with gap -->
+
+       
+     <!-- Added Video Section with gap -->
      <div class="mb-12">
       <video class="hero-video" controls autoplay muted loop>
        <source src="VID-20251106-WA0011.mp4" type="video/mp4">
@@ -94,6 +100,8 @@
       </video>
      </div>
      </div>
+
+
 </section><!-- Products Section -->
    <section id="products" class="py-16 px-6 bg-white">
     <div class="max-w-7xl mx-auto">
@@ -173,6 +181,7 @@
       </div>
      </div>
     </div>
+
    </section><!-- Product Details Modal -->
    <div id="product-modal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
     <div class="bg-white rounded-2xl max-w-4xl w-full max-h-[90%] overflow-y-auto">
@@ -199,6 +208,8 @@
       </div>
      </div>
     </div>
+
+
    </div><!-- Features Section -->
    <section id="about" class="py-16 px-6 bg-gradient-to-br from-gray-50 to-blue-50">
     <div class="max-w-7xl mx-auto">
@@ -227,6 +238,8 @@
       </div>
      </div>
     </div>
+
+
    </section><!-- Contact Section -->
    <section id="contact" class="py-16 px-6 bg-gradient-to-br from-blue-600 to-indigo-700 text-white">
     <div class="max-w-4xl mx-auto text-center">
@@ -254,6 +267,8 @@
       </div>
      </div>
     </div>
+
+    
    </section><!-- Footer -->
    <footer class="bg-gray-900 text-white py-8 px-6">
     <div class="max-w-7xl mx-auto text-center">
